2003-04-02 Zoran Vasiljevic <zoran@archiware.com>

	* threadCmd.c: removed checking of stopped flag
	during walk of the list of active threads. This
	solves some subtle thread reservation problems
	with threads marked to unwind on error.
	
2003-04-02 Zoran Vasiljevic <zoran@archiware.com>

	* threadCmd.c:
	* threadPoolCmd.c:
	* threadSpCmd.c:
	* threadSvCmd.c: always call registered exit callbacks
	with non-NULL clientData, otherwise Tcl won't invoke
	the registered  callback. 

2003-03-28 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadSvList.c
	* generic/threadSvCmd.c: fixed some rare cases
	where we incorrectly deep-copied the list object
	having zero elements.

	* generic/threadCmd.c: fixed broken AOLserver 3.x
	compatibility mode introduced by last 4.x changes.

2003-03-17 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadSvCmd.c: fixed incompatibility 
	with Tcl 8.4.2 filepath object

	* generic/threadCmd.c:
	* aolstub.cpp: adjusted for AOLserver 4.0
 
2003-02-24 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: fixed ThreadSetResult
	to correctly initialize all elements of the 
	result structure.

2003-02-08 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: fixed ListRemoveInner
	to correctly update global threadList ptr when 
	the last referenced thread exits. This was not
	the case before and we were trashing memory
	leading to process exitus.	

2003-01-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* generic/threadCmd.c (ThreadSendObjCmd):
	The thread::send command was not working
	under Win32 because threads that had an id
	that was a negative number were generating
	a usage error in the thread::send command.
	* tests/thread.test: Add test for negative
	number as thread id.

2003-01-22 Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: fixed reference to errorInfo
	when reporting error from the passed script.

2003-01-21  Mo DeJong  <mdejong@users.sourceforge.net>
